# JaegerWhisperSTT

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
docs/: index.html
jaeger_os/nodes/whisper_stt/: __init__.py  config.py  module.yaml  node.py
jaeger_os/nodes/whisper_stt/engine/: __init__.py  __main__.py  _base.py  _bench.py  bench.py
jaeger_os/nodes/whisper_stt/engine/continuous/: __init__.py  pipeline.py
jaeger_os/nodes/whisper_stt/engine/local_agreement/: __init__.py  pipeline.py
jaeger_os/nodes/whisper_stt/engine/two_pass/: pipeline.py
jaeger_os/nodes/whisper_stt/tests/: test_engine_smoke.py  test_module_contract.py
jaeger_whisper_stt/: __init__.py  module_roots.py
jaeger_whisper_stt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jaeger_whisper_stt/nodes/: __init__.py
jaeger_whisper_stt/nodes/whisper_stt/: __init__.py  config.py  module.yaml  node.py
jaeger_whisper_stt/nodes/whisper_stt/engine/: __init__.py  __main__.py  bench.py  registry.py
jaeger_whisper_stt/nodes/whisper_stt/engine/two_pass/: __init__.py
jaeger_whisper_stt/nodes/whisper_stt/tests/: test_engine_smoke.py  test_module_contract.py
